<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_margin="15dp"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/username_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--TODO: Change this later to get it dynamically. -->
        <TextView
            android:id="@+id/change_tv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_username_text"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/username_change_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_tv"
            android:textColor="@color/colorSecondaryText"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/delete_trip_history"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/delete_trip_tv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_trip_history_text"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/delete_trip_tv"
            android:text="@string/delete_past_trips_text"
            android:textColor="@color/colorSecondaryText"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/receive_notif_tv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/settings_checkbox"
            android:layout_toStartOf="@+id/settings_checkbox"
            android:text="@string/receive_notifications_text"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/receive_notif_tv"
            android:text="@string/receive_notifications_text_details"
            android:textColor="@color/colorSecondaryText"/>

        <CheckBox
            android:id="@+id/settings_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>

</LinearLayout>