<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forgetPasswordViewModel"
            type="com.mad.madproject.forgetpassword.ForgetPasswordViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/uikitbgclear"
        android:fitsSystemWindows="true"
        tools:context="com.mad.madproject.forgetpassword.ForgetPasswordActivity">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/transparent"
            android:contentDescription="@string/background_picture"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/parent_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">


                    <ImageView
                        android:layout_width="@dimen/logo_w_h"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/logo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/lbl_forgot_password"
                        android:textColor="@color/colorTextAndIcons"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/forgot_password_msg"
                        android:textColor="@color/colorTextAndIcons"
                        android:textSize="14sp"/>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{forgetPasswordViewModel.errorEmail}">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/roundwhite"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/email"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:text="@={forgetPasswordViewModel.email}"
                            android:textColor="@color/colorTextAndIcons"
                            android:textColorHint="@color/colorTextAndIcons"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Login Button -->

                    <Button
                        android:id="@+id/btn_reset_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@drawable/round"
                        android:padding="15dp"
                        android:text="@string/btn_reset_password"
                        android:textColor="@color/colorTextAndIcons"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/parent_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/failed_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/error_failed_forget_password_msg"
                        android:textColor="@color/colorError"
                        android:visibility="gone"
                        />

                    <Button
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:text="@string/btn_back"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</layout>
