<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addTripDetailsViewModel"
            type="com.mad.madproject.addtripdetails.AddTripDetailsViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/trip_to_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_name_text"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/addtrip_activity_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={addTripDetailsViewModel.tripName}"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trip_to_layout"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date_text"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/start_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@={addTripDetailsViewModel.startDate}"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date_layout"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_text"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/end_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@={addTripDetailsViewModel.endDate}"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/addtrip_activity_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/confirm_text"
            android:textAllCaps="false"
            android:textColor="@color/colorTextAndIcons"/>

    </RelativeLayout>
</layout>
