<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/uikitbgclear"
                android:fitsSystemWindows="true"
                tools:context="com.mad.madproject.register.RegisterActivity">

    <!--&lt;!&ndash; Setting the background opacity &ndash;&gt;-->
    <!--<View-->
    <!--android:id="@+id/title"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:alpha="0.5"-->
    <!--android:background="#000000" />-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/transparent"
        />

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo_txt"
            android:src="@mipmap/ic_launcher"/>
    </LinearLayout>

    <TextView
        android:id="@+id/application_name"
        android:layout_below="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Riotei"
        android:textSize="40sp"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:id="@+id/field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/application_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_field_margin"
        android:layout_marginRight="@dimen/activity_field_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundwhite"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/username"
            android:hint="@string/uname_hint"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/colorTextAndIcons"
            android:textColorHint="@color/colorTextAndIcons"/>

    </LinearLayout>

    <include
        android:id="@+id/text_field_layout"
        layout="@layout/text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_layout"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_field_layout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_field_margin"
        android:layout_marginRight="@dimen/activity_field_margin">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:background="@drawable/round"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="false"
            android:textColor="@color/colorTextAndIcons"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>